fix score spacing in round player table

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -1166,8 +1166,8 @@ a:visited:hover {
                 margin-left: 0.5em;
 
                 & > .score {
-                    font-size: 0.9em;
-                    margin-top: 0.5em;
+                    //font-size: 0.9em;
+                    margin-top: 0.125em;
                 }
             }
         }
